# habit_tracking_chatbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  setup.cfg
alembic/: env.py
alembic/versions/: 0d93437690b8_init_migration.py
app/: bot.py  config.py  database.py  main.py  schemas.py  settings.py
app/core/: constants.py  dependencies.py  templates.py  utils.py
app/models/: __init__.py  habbit.py  habit.py  user.py
app/services/: __init__.py  authentication.py  bot_keybord.py  daily_results.py  habit.py  notification.py  user.py
app/templates/: base.html  habbit_form.html  habit_form.html  login_form.html  main.html  registration_form.html
app/webapp/: __init__.py  authentication.py  habit.py  webhook.py
